# FPSTestWeb

./: .gitignore  TASKS.md  _oxlint.bat  changelog.txt  overview.py  run_all.bat  run_all.ps1  run_all_colys.bat  run_all_colys.ps1  run_all_naia.ps1  run_client.bat
_DEMO/: CircularBuffer.cs  CoolHitDetector.cs  DemoDataTypes.cs  DemoManager.cs  DemoPlayer.cs  DemoRecorder.cs  DemoSerializer.cs  DemoUI.cs  IDemoDataProvider.cs  IDemoEventSource.cs
_docs/: BROWSER_FPS_GENRE_OVERVIEW.md  CHROMEBOOK_OPTIMIZATION.md  CLIENT_AUTHORITATIVE_NETWORKING.md  EXPLOSION_VFX_SYSTEM.md  FOG_EFFECTS.md  FPS_GAME_SERVER_LANGUAGE_COMPARISON.md  GO_RUST_ZIG_NIM_SERVER_COMPARISON.md  KRUNKER_MONETIZATION.md  NARROW_ONE_ANALYSIS.md  NETWORKING.md  PELICAN_PARTY_MONETIZATION.md  PROCEDURAL_WORLD_GENERATION_RESEARCH.md  RUST_VS_GO_GAME_SERVERS.md  SERVER_ARCHITECTURE.md  TERRAIN.md  TERRAIN_TEXTURING.md  TICK_RATE_OPTIMIZATION.md  TRIBES_MOVEMENT_TECH_DEEP_DIVE.md  WEB_MULTIPLAYER_LIBRARIES.md  WEB_SHOOTER_DEVELOPMENT_PLAN.md
_reports/: client-tech-debt-cleanup.md  code-duplication-and-maints-refactoring-analysis.md  demo-system-implementation-plan.md  go-networking-evaluation.md  multiplayer-robustness-fixes.md  multiplayer-system-review.md  multiplayer-system-specification.md  naia-framework-analysis.md  naia-implementation-report.md  naia-integration-report.md  naia-wasm-integration-blockers.md  project-state-report.md  tech-debt-report.md  websocket-networking-plan.md
client/: _build.bat  (+4 more)
zzz/server_naia_client_wasm/: Cargo.toml  _build.bat
zzz/server_naia_client_wasm/src/: lib.rs
(+276 files in other folders)
